# mymt5

./: .gitignore  BUILD.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SETUP_INSTRUCTIONS.md  build.bat  build.sh  config.ini  config.ini.example  logging.conf.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_project.py  starter_template.py
.claude/: settings.local.json
data/: eurusd_h1.pkl
docs/: DEPLOYMENT.md  MAINTENANCE_PLAN.md  MT5_Architecture_Documentation.md  MT5_Implementation_Action_Plan.md  MT5_Project_Timeline.mermaid  MT5_Quick_Checklist.md  Makefile  PHASE10_COMPLETION_SUMMARY.md  PHASE9_COMPLETION_SUMMARY.md  PRODUCTION_CHECKLIST.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  README.md  SECURITY.md  conf.py  index.rst  installation.md  make.bat  mt5_architecture_overview.mermaid  mt5_class_diagram.mermaid  quickstart.md  troubleshooting.md  user_guide.md
docs/api/: README.md  client.rst
examples/: 01_basic_connection.py  02_account_info.py  02_account_management.py  03_symbol_management.py  04_terminal_info.py  05_data_management.py  06_history_analysis.py  07_trading_operations.py  08_validation.py  11_error_handling.py  12_simple_backtest.py  client_config.json  client_config.json.example  client_example.py  client_logs.json  client_logs.json.example
mymt5/: __init__.py  __version__.py  account.py  client.py  data.py  enums.py  history.py  risk.py  symbol.py  terminal.py  trade.py  utils.py  validator.py
scripts/: main.py
tests/: test_account.py  test_client.py  test_data.py  test_end_to_end.py  test_enums.py  test_error_scenarios.py  test_history.py  test_integration.py  test_performance.py  test_symbol.py  test_terminal.py  test_trade.py  test_utils.py  test_validator.py
